Integracao da pagina suaConta e consultaDadosTerceiros com o back-end

--- a/src/main/resources/public/consultaDadosTerceiros.html
+++ b/src/main/resources/public/consultaDadosTerceiros.html
@@ -11,8 +11,8 @@
     <link href="css/main.css" rel="stylesheet">
     <link href="css/responsive.css" rel="stylesheet">
     <link href="css/animate.min.css" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="css/style.css">
     <link rel="stylesheet" type="text/css" href="css/materialize.min.css">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
   
   </head>
   <body>
@@ -31,13 +31,12 @@
 
     <!-- <Formulário de Login"> -->
     <header id="home">
-      
         <div class="container">
           <div class="col-md-12">
             <div class="navbar navbar-inverse sticky-navigation navbar-fixed-top" role="navigation" data-spy="affix" data-offset-top="200">
               <div class="container">
                 <div class="navbar-header">
-                  <a class="logo-left " href="index.html">Semáforo do Consumidor</a>
+                  <a class="logo-left " href="tela-principal.html">Semáforo do Consumidor</a>
                 </div>
                 <div class="navbar-right">
                   <button class="menu-icon"  id="open-button">
@@ -65,21 +64,45 @@
               </div>
             </div>
           </form>
+          <div id="operacoes">
+
+          </div>
+<!--          <h2 class="suaConta">Dados de Terceiros</h2>-->
+<!--          <p class="suaConta">Tabela com os dados referentes cpf pesquisado:</p>-->
+<!--          <table id="tabela" class="table table-bordered">-->
+<!--            <thead>-->
+<!--            <tr>-->
+<!--              <th>ID pagamento</th>-->
+<!--              <th>CPF</th>-->
+<!--              <th>Nº Pgtos Realizados</th>-->
+<!--              <th>Quantidade Parcelas</th>-->
+<!--              <th>Vencimento Ult.Parcela</th>-->
+<!--              <th>Número contrato</th>-->
+<!--              <th>Valor Total-Contrato</th>-->
+<!--              <th>Código modalidade</th>-->
+<!--            </tr>-->
+<!--            </thead>-->
+<!--            <tbody id="operacoes">-->
+<!--            <tr>-->
+<!--              &lt;!&ndash;Tabela de Operações&ndash;&gt;-->
+<!--            </tr>-->
+<!--            </tbody>-->
+<!--          </table>-->
+
         </section>
     </main>
 
     <script src="js/jquery-2.1.4.min.js"></script>
-    <script src="js/materialize.min.js"></script>
-    <script src="js/login.js"></script>
+    <script src="js/logado.js"></script>
     <script src="js/consultaCpf.js"></script>
+    <script src="js/materialize.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/material.min.js"></script>
     <script src="js/wow.js"></script>
     <script src="js/classie.js"></script>
     <script src="js/jquery.nav.js"></script>      
     <script src="js/smooth-scroll.js"></script>
-    <script src="js/main.js"></script>
-    <script src="js/logado.js"></script>
+    <script src="js/main.js" async></script>
     <script>
         $(document).ready(function() {
             // This command is used to initialize some elements and make them work properly
