--- a/src/main/resources/public/login.html
+++ b/src/main/resources/public/login.html
@@ -22,7 +22,7 @@
             Semáforo Consumidor</span></i></a>
         </div>
         <ul class="nav navbar-nav main-navigation">
-            <li class="active"><a href="index.html">Início</a></li>
+            <li><a href="index.html">Início</a></li>
             <li><a href="cadastro.html">Cadastre-se</a></li>
         </ul>
         <button class="close-button" id="close-button">Fechar Menu</button>
@@ -64,13 +64,13 @@
  
 <!--    <script src="js/materialize.min.js"></script>-->
     <script src="js/jquery-2.1.4.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
     <script src="js/login.js"></script>
+    <script src="js/bootstrap.min.js"></script>
     <script src="js/material.min.js"></script>
     <script src="js/wow.js"></script>
     <script src="js/classie.js"></script>
     <script src="js/jquery.nav.js"></script>
     <script src="js/smooth-scroll.js"></script>
-    <script src="js/main.js"></script>
+    <script src="js/main.js" async></script>
   </body>
 </html>
