--- a/src/main/resources/public/tela-principal.html
+++ b/src/main/resources/public/tela-principal.html
@@ -19,7 +19,7 @@
   <body>
     <div class="navbar navbar-invers menu-wrap">
         <div class="navbar-header text-center">
-          <a class="navbar-brand logo-right" href="javascript:void(0)">Semáforo Consumidor</a>
+          <a class="navbar-brand logo-right" href="tela-principal.html">Semáforo Consumidor</a>
         </div>
         <ul class="nav navbar-nav main-navigation">
             <li><a href="consultaDadosTerceiros.html">Consultar CPF de Terceiros</a></li>
